--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="images/favicon_coffee_bean.ico" />
   
   <!-- SEO -->
   <meta name="description" content="Disfruta del mejor café artesanal, postres caseros y un ambiente acogedor en nuestra cafetería." />
