--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
  
   <!-- Hojas de estilo -->
   <link rel="stylesheet" href="./pages/index.css" />
+  <link rel="stylesheet" href="./pages/normalize.css" />
 
   <!-- Favicon -->
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
@@ -56,8 +57,6 @@
           src="images/inside_coffee_shop.png"
           alt="Imagen donde se muestra gente sentada en una cafetería"
         />
-        <!-------------->
-      </div>
       <div class="header__footer">
         <div class="header__paraghraph">
           <p class="header__paragraph">Horario</p>
@@ -143,8 +142,8 @@
             class="footer__logo"
           />
         </div>
-    
-        <div class="footer__circle"></div> <!-- decorativo -->
+        <!----No encontre la img por ningun lado----->
+        <div class="footer__circle"></div> 
     
         <div class="footer__social">
           <h4 class="footer__social-heading">Redes sociales</h4>
