--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </section>
       <section class="reservation" id="reservation">
         <h2 class="reservation__title">Reservar una mesa</h2>
-        <form class="reservation__form">
+        <form class="form reservation__form">
           <fieldset class="reservation__fieldset">
             
             <label class="reservation__label" for="name">Nombre</label>
